--- a/LetUsBringYourHomeStyle/Views/Registracija/Create.cshtml
+++ b/LetUsBringYourHomeStyle/Views/Registracija/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model LetUsBringYourHomeStyle.Models.RegistrovaniKorisnik
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Registracija";
 }
 
-<h1>Create</h1>
+<h1>Registracija</h1>
 
 <h4>RegistrovaniKorisnik</h4>
 <hr />
@@ -63,15 +63,16 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Registruj se" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+<br />
+<p>
+    <a asp-action="Index" asp-controller="Home">Nazad na početnu</a>
+</p>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
